# Chess

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
include/: assetmanager.hpp  board.hpp  game.hpp  moves.hpp  piece.hpp  settings.hpp  types.hpp
src/: assetmanager.cpp  board.cpp  game.cpp  moves.cpp  piece.cpp
